# x4c

./: .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json
MINGW/: CMakeCache.txt  bla.sh
cmake/: FindTalloc.cmake
misc/highlight/langDefs/: x4c.lang
misc/vim/ftdetect/: x4c.vim
misc/vim/syntax/: x4c.vim
src/: CMakeLists.txt  Common.h  element_handler.c  main.c  my_p99_common.h  regex.c
src/compile/: ast.c  ast.h  comp_main.c  lexer.l  parser.y
src/contrib/talloc/: talloc.c  talloc.h  talloc_config.h
src/decompile/: decls.h  decomp_main.c  decompile.c  xs_context.c
src/from_xml/: decls.h  decomp_main.c  decompile.c  util.c
src/to_xml/: ast.c  ast.h  comp_main.c  lexer.l  parser.y
src/util/: find.c  find.h  generic_list.c  linked_list.c  list.h  util.c
